--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,17 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+*::-webkit-scrollbar {
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #4a5568;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #edf2f7;
+}
